--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "Bebas Neue";
-  src: local("BebasNeueRegular"), url("../fonts/BebasNeueRegular.woff2") format("woff2"),
+  src: local("BebasNeueRegular"),
+    url("../fonts/BebasNeueRegular.woff2") format("woff2"),
     url("../fonts/BebasNeueRegular.woff") format("woff");
   font-display: swap;
 }
-
 
 * {
   box-sizing: border-box;
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 .header {
   background-color: #635854;
@@ -39,7 +39,6 @@ body {
 .navbar-link {
   text-decoration: none;
   color: #fff;
-  font-family
 }
 .navbar-contacts {
   text-align: right;
@@ -51,7 +50,7 @@ body {
   font-size: 14px;
   line-height: 16px;
 }
-.navbar-phone{
+.navbar-phone {
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
@@ -78,6 +77,9 @@ body {
 .home-image path:hover {
   opacity: 1;
   cursor: pointer;
+}
+path.current-floor {
+  opacity: 1;
 }
 .counter-group {
   display: flex;
@@ -107,9 +109,9 @@ body {
   margin-top: 10px;
 }
 .button-primary {
-  background: #3596F5;
+  background: #3596f5;
   border-radius: 6px;
-  color:#fff;
+  color: #fff;
   border: none;
   padding: 16px 36px;
   cursor: pointer;
